--- a/index.html
+++ b/index.html
@@ -124,35 +124,38 @@
   }
 
   let drops = []
-  const movie_2000 = []
-  const movie_2005 = []
-  const movie_2010 = ['hunger_games_pin.gif']
-  const movie_2015 = []
-  const movie_2020 = ['netflix_logo.gif']
+  const movie_2000 = ['babygenius.jpg']
+  const movie_2005 = ['sharklava.png', 'skykids1.jpg', 'skykids2.png', 'spykids2.png',
+                     ]
+  const movie_2010 = ['hunger_games_pin.gif', 'littlerascals.jpg', 'sandlot.jpg']
+  const movie_2015 = ['bueller.jpg', 'selenamovie.jpg']
+  const movie_2020 = ['netflix_logo.gif', 'karatekid.png', 'selenamovie.jpg', 'sharklava.png']
 
   const tv_2000 = ['rugrats.gif']
-  const tv_2005 = ['disney_logo.gif', 'nick_logo.gif']
-  const tv_2010 = ['nick_logo.gif']
+  const tv_2005 = ['disney_logo.gif', 'nick_logo.gif', 'fullhouse.png', 'hannahmontana.png',
+                  'spongebob.gif']
+  const tv_2010 = ['nick_logo.gif', 'btr.png', 'houseofanubis.png']
   const tv_2015 = ['RBD_logo.gif', 'gilmore_girls_lukes.gif', 'elite_logo.gif',
-    'netflix_logo.gif', 'parks_rec_leslie.gif'
+    'netflix_logo.gif', 'parks_rec_leslie.gif', 'goodplace.png', 'janethevirgin.png',
+    'mitm.png', 'odaat.png', 'the100.png'
   ]
   const tv_2020 = ['cobra_kai.gif', 'disney_logo.gif', 'jatp_logo.gif',
-    'miyagi-do.gif', 'netflix_logo.gif'
-  ]
+    'miyagi-do.gif', 'netflix_logo.gif', 'btr.png', 'houseofanubis.png',
+    'mitm.png', 'raven.png', 'thats70sshow.png', 'wandavision.gif']
 
   const book_2000 = []
   const book_2005 = ['percy_jackson.gif']
-  const book_2010 = ['hunger_games_pin.gif']
-  const book_2015 = []
+  const book_2010 = ['hunger_games_pin.gif', 'divergent_book.png', 'gone_series.jpg']
+  const book_2015 = ['edgarsawtell.jpg', 'everythingnevertold.jpg', 'invisibleman.jpg', 'perks.jpg']
   const book_2020 = ['percy_jackson.gif']
 
   const trend_2000 = ['lisa_frank_alien_car.gif', 'lisa_frank_angle.gif',
     'lisa_frank_tigre.gif',
   ]
-  const trend_2005 = ['motorola_razer.gif']
-  const trend_2010 = ['ducttape.gif']
-  const trend_2015 = ['pokeman_go.gif']
-  const trend_2020 = []
+  const trend_2005 = ['motorola_razer.gif', 'gamecube.gif']
+  const trend_2010 = ['ducttape.gif', 'wii.gif']
+  const trend_2015 = ['pokeman_go.gif', 'menudo.jpg']
+  const trend_2020 = ['menudo.jpg', 'spongebob.gif', 'timbiriche.jpg', 'wii.gif']
 
   let yr00 = false;
   let yr05 = false;
