removed extra comma

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 
   let drops = []
   const movie_2000 = ['babygenius.jpg']
-  const movie_2005 = ['sharklava.png', 'skykids1.jpg', 'skykids2.png', 'spykids2.png',
-                     ]
+  const movie_2005 = ['sharklava.png', 'skykids1.jpg', 'skykids2.png', 'spykids2.png']
   const movie_2010 = ['hunger_games_pin.gif', 'littlerascals.jpg', 'sandlot.jpg']
   const movie_2015 = ['bueller.jpg', 'selenamovie.jpg']
   const movie_2020 = ['netflix_logo.gif', 'karatekid.png', 'selenamovie.jpg', 'sharklava.png']
