--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   ]
   const tv_2020 = ['cobra_kai.gif', 'disney_logo.gif', 'jatp_logo.gif',
     'miyagi-do.gif', 'netflix_logo.gif', 'btr.png', 'houseofanubis.png',
-    'mitm.png', 'raven.png', 'thats70sshow.png', 'wandavision.gif']
+    'mitm.png', 'raven.png', 'that70sshow.png', 'wandavision.gif']
 
   const book_2000 = []
   const book_2005 = ['percy_jackson.gif']
