--- a/index.html
+++ b/index.html
@@ -125,9 +125,14 @@
   }
 
   let drops = []
-  const movie_2000 = ['babygenius.jpg']
-  const movie_2005 = ['sharklava.png', 'spykids1.jpg', 'spykids2.png', 'spykids3.png']
-  const movie_2010 = ['hunger_games_pin.gif', 'littlerascals.jpg', 'sandlot.jpg']
+  const movie_2000 = [{src:'babygenius.jpg', url: 'https://youtu.be/vggkxNKwRqw'}]
+  const movie_2005 = [{src:'sharklava.png', url: 'https://youtu.be/plUgn_FC0sk'},
+                    {src:'spykids1.jpg', url:'https://en.wikipedia.org/wiki/Spy_Kids'}, 
+                    {src:'spykids2.png', url: 'https://youtu.be/jCypHjKXwis'},
+                    {src:'spykids3.png', url:'https://youtu.be/LgKSHEYCuZU'}]
+  const movie_2010 = [{src:'hunger_games_pin.gif', url:'https://youtu.be/G_ksO7g_qLY'},
+                    {src:'littlerascals.jpg', url: 'https://youtu.be/J2ONM6n7avA'},
+                    {src:'sandlot.jpg', url: 'https://youtu.be/hxJPJ6JY0Pk'}]
   const movie_2015 = ['bueller.jpg', 'selenamovie.jpg']
   const movie_2020 = ['netflix_logo.gif', 'karatekid.png', 'selenamovie.jpg', 'sharklava.png']
 
