finished urls for movies

--- a/index.html
+++ b/index.html
@@ -133,8 +133,12 @@
   const movie_2010 = [{src:'hunger_games_pin.gif', url:'https://youtu.be/G_ksO7g_qLY'},
                     {src:'littlerascals.jpg', url: 'https://youtu.be/J2ONM6n7avA'},
                     {src:'sandlot.jpg', url: 'https://youtu.be/hxJPJ6JY0Pk'}]
-  const movie_2015 = ['bueller.jpg', 'selenamovie.jpg']
-  const movie_2020 = ['netflix_logo.gif', 'karatekid.png', 'selenamovie.jpg', 'sharklava.png']
+  const movie_2015 = [{src:'bueller.jpg', url: 'https://chicago.curbed.com/maps/ferris-buellers-day-off-filming-locations-chicago'},
+                    {src:'selenamovie.jpg', url:'https://youtu.be/Kkl4-30oHVU'}]
+  const movie_2020 = [{src:'netflix_logo.gif', url: 'https://youtu.be/XL6zNexyt8o'},
+                    {src:'karatekid.png', url: 'https://en.wikipedia.org/wiki/The_Karate_Kid_(franchise)'},
+                    {src:'selenamovie.jpg', url: 'https://open.spotify.com/playlist/37i9dQZF1DX3V2qP58Iftl'},
+                    {src:'sharklava.png', url:'https://youtu.be/eI34Sks-zCI'}]
 
   const tv_2000 = ['rugrats.gif']
   const tv_2005 = ['disney_logo.gif', 'nick_logo.gif', 'fullhouse.png', 'hannahmontana.png',
