finsihed up to tv 2015

--- a/index.html
+++ b/index.html
@@ -140,14 +140,26 @@
                     {src:'selenamovie.jpg', url: 'https://open.spotify.com/playlist/37i9dQZF1DX3V2qP58Iftl'},
                     {src:'sharklava.png', url:'https://youtu.be/eI34Sks-zCI'}]
 
-  const tv_2000 = ['rugrats.gif']
-  const tv_2005 = ['disney_logo.gif', 'nick_logo.gif', 'fullhouse.png', 'hannahmontana.png',
-                  'spongebob.gif']
-  const tv_2010 = ['nick_logo.gif', 'btr.png', 'houseofanubis.png']
-  const tv_2015 = ['RBD_logo.gif', 'gilmore_girls_lukes.gif', 'elite_logo.gif',
-    'netflix_logo.gif', 'parks_rec_leslie.gif', 'goodplace.png', 'janethevirgin.png',
-    'mitm.png', 'odaat.png', 'the100.png'
-  ]
+  const tv_2000 = [{src:'rugrats.gif', url:'https://youtu.be/jMEj9kQg3F8'}]
+  const tv_2005 = [{src:'disney_logo.gif', url: 'https://en.wikipedia.org/wiki/List_of_programs_broadcast_by_Disney_Channel'},
+                {src:'nick_logo.gif', url: 'https://en.wikipedia.org/wiki/List_of_programs_broadcast_by_Nickelodeon'},
+                {src:'fullhouse.png', url: 'https://youtu.be/Obga0OtiDsE'},
+                {src:'hannahmontana.png', url: 'https://youtu.be/W9UXi0BC3UQ'},
+                {src:'spongebob.gif', url: 'https://www.youtube.com/watch?v=HCnxzmE02Sk'}]
+  const tv_2010 = [{src:'nick_logo.gif', url: 'https://en.wikipedia.org/wiki/List_of_programs_broadcast_by_Nickelodeon'},
+                  {src: 'btr.png', url: 'https://open.spotify.com/playlist/37i9dQZF1DZ06evO0lmDjH?si=9ac8b034fa4c45e0'},
+                  {src: 'zoey101.jpg', url: 'https://youtu.be/hLmAkWqsIl8'},
+                  {src: 'houseofanubis.png', url: 'https://youtu.be/kVc4O8IT_30'}]
+  const tv_2015 = [{src:'RBD_logo.gif', url:'https://open.spotify.com/playlist/37i9dQZF1DWUnwXAaJZdpo?si=771c9367130c415a'}, 
+                  {src:'gilmore_girls_lukes.gif', url: 'https://youtube.com/playlist?list=PLqfJ1GkbzerH0gH6ur0B1xPO94wktMjwS'},
+                  {src:'elite_logo.gif', url:'https://www.instagram.com/elitenetflix/'},
+                  {src:'netflix_logo.gif', url: 'https://en.wikipedia.org/wiki/List_of_Netflix_original_programming'},
+                  {src:'parks_rec_leslie.gif', url: 'https://www.youtube.com/watch?v=eey-wOyTOJs'},
+                  {src:'goodplace.png', url: 'https://www.youtube.com/watch?v=srlwXvJSEJU'},
+                  {src:'janethevirgin.png', url: 'https://youtu.be/JOKUcwrPFmg'},
+                  {src:'mitm.png', url: 'https://www.youtube.com/watch?v=c4CVKbVtTsc'},
+                  {src:'odaat.png', url:'https://youtu.be/U1tekbfDSjg'},
+                  {src:'the100.png', url:'https://youtu.be/aDrsItJ_HU4'}]
   const tv_2020 = ['cobra_kai.gif', 'disney_logo.gif', 'jatp_logo.gif',
     'miyagi-do.gif', 'netflix_logo.gif', 'btr.png', 'houseofanubis.png',
     'mitm.png', 'raven.png', 'that70sshow.png', 'wandavision.gif']
