--- a/index.html
+++ b/index.html
@@ -160,9 +160,17 @@
                   {src:'mitm.png', url: 'https://www.youtube.com/watch?v=c4CVKbVtTsc'},
                   {src:'odaat.png', url:'https://youtu.be/U1tekbfDSjg'},
                   {src:'the100.png', url:'https://youtu.be/aDrsItJ_HU4'}]
-  const tv_2020 = ['cobra_kai.gif', 'disney_logo.gif', 'jatp_logo.gif',
-    'miyagi-do.gif', 'netflix_logo.gif', 'btr.png', 'houseofanubis.png',
-    'mitm.png', 'raven.png', 'that70sshow.png', 'wandavision.gif']
+  const tv_2020 = [{src:'cobra_kai.gif', url: 'https://youtu.be/xCwwxNbtK6Y'},
+                  {src:'disney_logo.gif', url:'https://www.youtube.com/c/caitlovesdisney/videos'},
+                  {src:'jatp_logo.gif', url: 'https://youtu.be/VXKqHzoHAUU'},
+                  {src:'miyagi-do.gif', url:'https://youtu.be/3vg-SvQdHig'},
+                  {src:'netflix_logo.gif', url:'https://www.instagram.com/whattowatchonnetflix/'},
+                  {src:'btr.png', url: 'https://youtu.be/_69yhwIaHLc'},
+                  {src:'houseofanubis.png', url: 'https://youtu.be/BSvxlEEYtO4'},
+                  {src:'mitm.png', url: 'https://youtu.be/4vWis-I-Wl4'},
+                  {src:'raven.png', url: 'https://youtu.be/gpH_PIqT-q8'},
+                  {src:'that70sshow.png', url:'https://youtu.be/n7csyX_A_gc'},
+                  {src:'wandavision.gif', url:'https://youtu.be/qqyZkB1UCAg'}]
 
   const book_2000 = []
   const book_2005 = ['percy_jackson.gif']
