ready for last few links

--- a/index.html
+++ b/index.html
@@ -173,18 +173,30 @@
                   {src:'wandavision.gif', url:'https://youtu.be/qqyZkB1UCAg'}]
 
   const book_2000 = []
-  const book_2005 = ['percy_jackson.gif']
-  const book_2010 = ['hunger_games_pin.gif', 'divergent_book.png', 'gone_series.jpg']
-  const book_2015 = ['edgarsawtell.jpg', 'everythingnevertold.jpg', 'invisibleman.jpg', 'perks.jpg']
-  const book_2020 = ['percy_jackson.gif']
+  const book_2005 = [{src:'percy_jackson.gif', url:''}]
+  const book_2010 = [{src:'hunger_games_pin.gif', url:''},
+                   {src:'divergent_book.png', url:''},
+                   {src:'gone_series.jpg', url:''}]
+  const book_2015 = [{src:'edgarsawtell.jpg', url:''},
+                   {src:'everythingnevertold.jpg', url:''},
+                   {src:'invisibleman.jpg', url:''},
+                   {src:'perks.jpg', url:''}]
+  const book_2020 = [{src:'percy_jackson.gif', url:''}]
 
-  const trend_2000 = ['lisa_frank_alien_car.gif', 'lisa_frank_angle.gif',
-    'lisa_frank_tigre.gif',
-  ]
-  const trend_2005 = ['motorola_razer.gif', 'gamecube.gif']
-  const trend_2010 = ['ducttape.gif', 'wii.gif']
-  const trend_2015 = ['pokeman_go.gif', 'menudo.jpg']
-  const trend_2020 = ['menudo.jpg', 'spongebob.gif', 'timbiriche.jpg', 'wii.gif']
+  const trend_2000 = [{src:'lisa_frank_alien_car.gif', url:''},
+                    {src:'lisa_frank_angle.gif', url:''},
+                    {src:'lisa_frank_tigre.gif', url:''},
+                    ]
+  const trend_2005 = [{src:'motorola_razer.gif', url:''},
+                    {src:'gamecube.gif'}, url:'']
+  const trend_2010 = [{src:'ducttape.gif', url:''},
+                    {src:'wii.gif'}, url:'']
+  const trend_2015 = [{src:'pokeman_go.gif', url:''},
+                     {src:'menudo.jpg'}, url:'']
+  const trend_2020 = [{src:'menudo.jpg', url:''},
+                    {src:'spongebob.gif', url:''},
+                    {src:'timbiriche.jpg', url:''},
+                    {src:'wii.gif', url:''}]
 
   let yr00 = false;
   let yr05 = false;
