everything should have links now

--- a/index.html
+++ b/index.html
@@ -173,30 +173,29 @@
                   {src:'wandavision.gif', url:'https://youtu.be/qqyZkB1UCAg'}]
 
   const book_2000 = []
-  const book_2005 = [{src:'percy_jackson.gif', url:''}]
-  const book_2010 = [{src:'hunger_games_pin.gif', url:''},
-                   {src:'divergent_book.png', url:''},
-                   {src:'gone_series.jpg', url:''}]
-  const book_2015 = [{src:'edgarsawtell.jpg', url:''},
-                   {src:'everythingnevertold.jpg', url:''},
-                   {src:'invisibleman.jpg', url:''},
-                   {src:'perks.jpg', url:''}]
-  const book_2020 = [{src:'percy_jackson.gif', url:''}]
+  const book_2005 = [{src:'percy_jackson.gif', url:'https://en.wikipedia.org/wiki/Percy_Jackson'}]
+  const book_2010 = [{src:'hunger_games_pin.gif', url:'https://www.tiktok.com/@saltysoumya/video/6912284841643953414'},
+                   {src:'divergent_book.png', url:'https://youtu.be/c9e13yQVpBM'},
+                   {src:'gone_series.jpg', url:'https://en.wikipedia.org/wiki/Gone_(novel_series)'}]
+  const book_2015 = [{src:'edgarsawtell.jpg', url:'https://en.wikipedia.org/wiki/The_Story_of_Edgar_Sawtelle'},
+                   {src:'everythingnevertold.jpg', url:'https://www.celesteng.com/everything-i-never-told-you'},
+                   {src:'perks.jpg', url:'https://www.pinterest.com/search/pins/?q=perks%20of%20being%20a%20wallflower'}]
+  const book_2020 = [{src:'percy_jackson.gif', url:'https://riordan.fandom.com/wiki/Timeline'}]
 
-  const trend_2000 = [{src:'lisa_frank_alien_car.gif', url:''},
-                    {src:'lisa_frank_angle.gif', url:''},
-                    {src:'lisa_frank_tigre.gif', url:''},
+  const trend_2000 = [{src:'lisa_frank_alien_car.gif', url:'https://www.mentalfloss.com/article/66688/17-bright-and-colorful-facts-about-lisa-frank'},
+                    {src:'lisa_frank_angle.gif', url:'https://www.buzzfeed.com/crystalro/lisa-frank-emojis-youll-wish-were-real'},
+                    {src:'lisa_frank_tigre.gif', url:'https://www.pinterest.com/search/pins/?q=lisa%20frank'},
                     ]
-  const trend_2005 = [{src:'motorola_razer.gif', url:''},
-                    {src:'gamecube.gif'}, url:'']
-  const trend_2010 = [{src:'ducttape.gif', url:''},
-                    {src:'wii.gif'}, url:'']
-  const trend_2015 = [{src:'pokeman_go.gif', url:''},
-                     {src:'menudo.jpg'}, url:'']
-  const trend_2020 = [{src:'menudo.jpg', url:''},
-                    {src:'spongebob.gif', url:''},
-                    {src:'timbiriche.jpg', url:''},
-                    {src:'wii.gif', url:''}]
+  const trend_2005 = [{src:'motorola_razer.gif', url:'https://www.pcmag.com/news/a-visual-history-of-the-motorola-razr'},
+                    {src:'gamecube.gif', url:'https://en.wikipedia.org/wiki/GameCube'}]
+  const trend_2010 = [{src:'ducttape.gif', url:'https://www.reddit.com/r/GenZ/comments/frc5nf/do_any_of_you_guys_remember_that_duct_wallet/'},
+                    {src:'wii.gif', url:'https://www.youtube.com/watch?v=Twi92KYddW4'}]
+  const trend_2015 = [{src:'pokeman_go.gif', url:'https://en.wikipedia.org/wiki/Pok%C3%A9mon_Go'},
+                     {src:'menudo.jpg', url:'https://open.spotify.com/playlist/37i9dQZF1DZ06evO27DNND'}]
+  const trend_2020 = [{src:'menudo.jpg', url:'https://open.spotify.com/playlist/37i9dQZF1DZ06evO27DNND'},
+                    {src:'spongebob.gif', url:'https://knowyourmeme.com/memes/subcultures/spongebob-squarepants'},
+                    {src:'timbiriche.jpg', url:'https://open.spotify.com/playlist/37i9dQZF1DZ06evO0VBMZi'},
+                    {src:'wii.gif', url:'https://youtu.be/scnFH-MldJM'}]
 
   let yr00 = false;
   let yr05 = false;
