--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         this.x = Math.random() * window.innerWidth
       }
       this.img.style.top = `${this.y}px`
-      this.img.style.left = `${this.x}px`
+      this.img.style.right = `${this.x}px`
     }
 
     show() {
