first two cursors in

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     margin: 20px;
     background: url(staticbackground.gif);
     overflow: hidden;
+    cursor: url(Arrow.cur), auto
   }
 
   .years {
@@ -28,7 +29,7 @@
     font-size: 25px;
     font-family: Papyrus;
     font-weight: bold;
-    cursor: pointer;
+    cursor: url(hand.cur), pointer;
   }
 
   #y2000 {
