--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
       this.img.style.left = `${this.x}px`
       this.img.style.top = `${this.y}px`
       this.img.style.display = 'none' // hide by default 
+      this.img.style.cursor = "url('Help.cur'), pointer"
+
     }
 
     fall() {
