added in books & links

--- a/index.html
+++ b/index.html
@@ -180,11 +180,20 @@
                   {src:'that70sshow.png', url:'https://youtu.be/n7csyX_A_gc'},
                   {src:'wandavision.gif', url:'https://youtu.be/qqyZkB1UCAg'}]
 
-  const book_2000 = []
-  const book_2005 = [{src:'percy_jackson.gif', url:'https://en.wikipedia.org/wiki/Percy_Jackson'}]
+  const book_2000 = [{src:'loveyouforever.jpg', src:'https://youtu.be/7HppLdLhlzY'}]
+  const book_2005 = [{src:'percy_jackson.gif', url:'https://en.wikipedia.org/wiki/Percy_Jackson'},
+                    {src: 'abbyhayes.jpg', url:'https://en.wikipedia.org/wiki/Abby_Hayes'},
+                    {src:'babymouse.jpg', url:'https://en.wikipedia.org/wiki/Jennifer_L._Holm#Babymouse_series'},
+                    {src: 'emmajean.jpg', url: 'https://www.penguinrandomhouse.com/books/298728/emma-jean-lazarus-fell-out-of-a-tree-by-lauren-tarshis/'},
+                    {src: 'frannysteing.jpg', url:'http://frannykstein.com/'},
+                    {src: 'itchild.jpg', url: 'https://en.wikipedia.org/wiki/Dave_Pelzer'}]
   const book_2010 = [{src:'hunger_games_pin.gif', url:'https://www.tiktok.com/@saltysoumya/video/6912284841643953414'},
                    {src:'divergent_book.png', url:'https://youtu.be/c9e13yQVpBM'},
-                   {src:'gone_series.jpg', url:'https://en.wikipedia.org/wiki/Gone_(novel_series)'}]
+                   {src:'gone_series.jpg', url:'https://en.wikipedia.org/wiki/Gone_(novel_series)'},
+                   {src: 'bootcamp.jpg', url:'https://en.wikipedia.org/wiki/Boot_Camp_(novel)'},
+                   {src: 'callmehope.jpg', url:'https://www.bookconnections.org/annotations.cgi?id=9741#t_cid_gbs'},
+                   {src: 'gabag.jpg', url: 'https://en.wikipedia.org/wiki/Give_a_Boy_a_Gun'},
+                   {src: 'suchaprettygirl.jpg', url: 'https://en.wikipedia.org/wiki/Such_A_Pretty_Girl'}]
   const book_2015 = [{src:'edgarsawtell.jpg', url:'https://en.wikipedia.org/wiki/The_Story_of_Edgar_Sawtelle'},
                    {src:'everythingnevertold.jpg', url:'https://www.celesteng.com/everything-i-never-told-you'},
                    {src:'perks.jpg', url:'https://www.pinterest.com/search/pins/?q=perks%20of%20being%20a%20wallflower'}]
