--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                   {src:'that70sshow.png', url:'https://youtu.be/n7csyX_A_gc'},
                   {src:'wandavision.gif', url:'https://youtu.be/qqyZkB1UCAg'}]
 
-  const book_2000 = [{src:'loveyouforever.jpg', src:'https://youtu.be/7HppLdLhlzY'}]
+  const book_2000 = [{src:'loveyouforever.jpg', url:'https://youtu.be/7HppLdLhlzY'}]
   const book_2005 = [{src:'percy_jackson.gif', url:'https://en.wikipedia.org/wiki/Percy_Jackson'},
                     {src: 'abbyhayes.jpg', url:'https://en.wikipedia.org/wiki/Abby_Hayes'},
                     {src:'babymouse.jpg', url:'https://en.wikipedia.org/wiki/Jennifer_L._Holm#Babymouse_series'},
                     {src: 'emmajean.jpg', url: 'https://www.penguinrandomhouse.com/books/298728/emma-jean-lazarus-fell-out-of-a-tree-by-lauren-tarshis/'},
-                    {src: 'frannysteing.jpg', url:'http://frannykstein.com/'},
+                    {src: 'frannystein.jpg', url:'http://frannykstein.com/'},
                     {src: 'itchild.jpg', url: 'https://en.wikipedia.org/wiki/Dave_Pelzer'}]
   const book_2010 = [{src:'hunger_games_pin.gif', url:'https://www.tiktok.com/@saltysoumya/video/6912284841643953414'},
                    {src:'divergent_book.png', url:'https://youtu.be/c9e13yQVpBM'},
