change size too

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         this.y = Math.random() * -500 - 100
         this.x = Math.random() * (window.innerWidth - this.img.width)
         this.yspeed = Math.random() * 2
+        this.r = Math.random() * 100 + 75
       }
       this.img.style.top = `${this.y}px`
       this.img.style.left = `${this.x}px`
